# rust-backend-template

./: Cargo.toml  Dockerfile  README.md
migrations/: 20230801010903_user.sql
src/: errors.rs  main.rs  util.rs
src/model/: user.rs
