[package]
name = "rust-backend-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
anyhow = "1.0.72"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "json", "postgres"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
